# rgb-lightning-node

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.local  README.md  VLS_HANDSHAKE_SOLUTION.md  compose.yaml  flake.nix  openapi.yaml  regtest.sh  start.sh
.github/workflows/: build.yaml  format.yaml  lint.yaml  push.yaml  test.yaml
proto/: vls_signer.proto
src/: args.rs  disk.rs  error.rs  ldk.rs  main.rs  rgb.rs  routes.rs  utils.rs
src/signer/: vls_signer.rs
src/test/: hodl_invoice.rs  mod.rs  submarine_swap.rs  swap_roundtrip_assets.rs
src/vls/: client.rs  handshake.rs  mod.rs
